--- a/lab/src/main/resources/add-items-to-cart.form
+++ b/lab/src/main/resources/add-items-to-cart.form
@@ -8,7 +8,8 @@
         "columns": null
       },
       "id": "Field_03ymibc",
-      "key": "minPrice"
+      "key": "minPrice",
+      "readonly": true
     },
     {
       "label": "Цена до",
@@ -18,7 +19,8 @@
         "columns": null
       },
       "id": "Field_10ge5g7",
-      "key": "maxPrice"
+      "key": "maxPrice",
+      "readonly": true
     },
     {
       "label": "Товары",
@@ -45,7 +47,7 @@
       ]
     },
     {
-      "label": "Выберите товары",
+      "label": "Выберите товар",
       "type": "select",
       "layout": {
         "row": "Row_1o4aird",
@@ -53,7 +55,7 @@
       },
       "id": "Field_0uww0tg",
       "key": "select",
-      "valuesKey": "${selectDelegate}"
+      "valuesKey": "select-options"
     },
     {
       "label": "Количество",
