--- a/lab/src/main/resources/input-address.form
+++ b/lab/src/main/resources/input-address.form
@@ -48,7 +48,7 @@
         "columns": null
       },
       "id": "Field_160uwnl",
-      "key": "street"
+      "key": "address"
     },
     {
       "label": "Дом",
