--- a/lab/src/main/resources/pick_pickup_point.form
+++ b/lab/src/main/resources/pick_pickup_point.form
@@ -39,7 +39,7 @@
       },
       "id": "Field_151ahea",
       "key": "pickuper",
-      "valuesKey": "select-options"
+      "valuesKey": "select-options-points"
     },
     {
       "action": "submit",
